# ICRA2020-JLU-TARS_GO-Decision

./: LICENSE.txt  README.md
决策树/: README.md
决策树/pictures/: decision.drawio
决策树/roborts_decision/: CMakeLists.txt  README.md  behavior_test.cpp  gimbal.cpp  icra_decision_node.cpp  pos_reciever.cpp
决策树/roborts_decision/action_node/: BackAwayAction.h  BackBootArea.h  ChaseAction.h  ChassisLimited.h  DeckChaseAction.h  DefendAction.h  EscapeAction.h  FollowAction.h  FrozeAction.h  GainBloodAction.h  GainBulletAction.h  GimbalLimited.h  SearchAction.h  TurnToDetectedDirection.h  WaitBuffRefresh.h  readme.md
决策树/roborts_decision/behavior_tree/: behavior_node.h
决策树/roborts_decision/blackboard/: blackboard.h  readme.md
决策树/roborts_decision/config/: buffposition.yaml  decision.prototxt  decision.yaml  topic_name.prototxt
决策树/roborts_decision/include/: goal_factory.h  readme.md
决策树/roborts_decision/interact/: mutualboard.h  pos_reciever.cpp  readme.md
决策树/roborts_decision/launch/: loadparam_test.launch
决策树/roborts_decision/proto/: decision.pb.cc  decision.pb.h  decision.proto  test.cpp
决策树/roborts_msgs/: CMakeLists.txt  README.md  package.xml
决策树/roborts_msgs/msg/: GimbalActionlib.msg  GimbalControl.msg  PunishInfo.msg  PyArmorInfo.msg  RobotInfo.msg  SentryInfo.msg  TreeStatus.msg
决策树/roborts_msgs/srv/: SwingDefend.srv
强化学习部分/: README  README.md  environment.yaml  run.sh  simulator.py  test.py  train.py  utils.py  关键参数.md
强化学习部分/agent/: AC.py  hand.py  model.py  move.py
强化学习部分/archieved/: Astar.py  DynamicWindow.py  GlobalLocalPlanner.py  MoveAction.py  visual_traj.py
强化学习部分/battlefield/body/: obstacle.py  projectile.py  robot.py
强化学习部分/battlefield/referee/: buff.py  contact.py  supply.py
强化学习部分/battlefield/sensor/: capture.py
强化学习部分/img/: README.md
